# build-moat-live-sessions

chatgpt_task/: .gitignore  PROMPT.md  README.md
chatgpt_task/scaffold/: pyproject.toml
chatgpt_task/scaffold/app/: LLMcaller.py  database.py  mcp_server.py  scheduler.py
chatgpt_task/scaffold/scripts/: test_llm_job.py
qr_code_generator/: README.md
